Realign recipe text, fix image background

--- a/recipes/styles2.css
+++ b/recipes/styles2.css
@@ -22,23 +22,25 @@ body{
     text-align: right;
 }
 
-.background-shape{
-    height:  38vw;;
+.background-shape-recipe{
+    height:  42vw;;
     width: 30vw;
     background-color:rgb(250, 250, 210,.8);
     border-radius: 30px;
     margin-bottom: 30px;
     margin-right: 20px;
     position:absolute;
-    right: 45%;
+    right: 40%;
     top:15%;
 }
 
 .background-shape-image{
     height:  18vw;;
     width: 18vw;
-    background-color:rgba(0, 0, 0, 0.815);
-    border-radius: 50%;
+    background-color:rgba(0, 0, 0, 0.915);
+    border-radius: 30px;
+    margin-bottom: 30px;
+    margin-right: 20px;
     position:absolute;
     left:65%;
     text-align: center;
@@ -54,7 +56,7 @@ body{
     margin-top: 5%;
     margin-left: 5%;
     margin-right:5%;
-    text-align: center;
+    text-align: left;
 }
 
 ul,ol{
@@ -63,12 +65,20 @@ ul,ol{
 }
 
 .center-list{
-    text-align: center;
+    text-align: left;
 }
 
 img{
     position:relative;
     width:15vw;
+    height: auto;
+    top:10%;
+
+}
+
+.recipe-body img{
+    position:relative;
+    width:7vw;
     height: auto;
     top:10%;
 
